<resources>

    <!-- General strings -->
    <string name="app_name">DU Updater</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="hide_app_icon">Hide app</string>
    <string name="settings">Settings</string>
    <string name="qs_tile_name">Updater</string>
    <string name="gapps_category">Gapps</string>

    <!-- Collapsing toolbar titles -->
    <string name="official">DU Updater - Official</string>
    <string name="weeklies">DU Updater - Weeklies</string>
    <string name="rc">DU Updater - Rc</string>
    <string name="dynamic_gapps">DU Updater - Dynamic</string>
    <string name="tr_gapps">DU Updater - Theme ready</string>
    <string name="settings_alt">DU Updater - Settings</string>

    <!-- Theme strings -->
    <string name="theme_options">Theme options</string>
    <string name="pref_navbar_tint_title">Navigation bar tint</string>

    <!-- Shortcuts -->
    <string name="shortcuts_weeklies">Weekly builds</string>
    <string name="shortcuts_rc">RC builds</string>
    <string name="shortcuts_dynamic_gapps">Dynamic gapps</string>
    <string name="shortcuts_tr_gapps">Theme ready gapps</string>

    <!-- Snackbar messages -->
    <string name="no_internet_snackbar">You must be connected to the internet to use the updater</string>
    <string name="no_files_to_show">No files to show</string>

    <!-- Dialogs & Downloads -->
    <string name="dialog_title">DU Update Available</string>
    <string name="dialog_download">Download</string>
    <string name="major_version_text">is available for download</string>
    <string name="minor_version_text">An update</string>
    <string name="build_date_text">A newer build of DU is available for download</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="du_download">DU Download</string>
    <string name="download_happy">Download finished, happy flashing!</string>
    <string name="complete">Complete</string>
    <string name="download_failed">Download failed</string>

    <!-- Nav drawer items -->
    <string name="navdrawer_official">Official builds</string>
    <string name="navdrawer_rc">RC builds</string>
    <string name="navdrawer_weeklies">Weekly builds</string>
    <string name="navdrawer_dynamic_gapps">Dynamic</string>
    <string name="navdrawer_tr_gapps">Theme ready</string>

    <!--Card String-->
    <string name="card_file_size">File Size: %1$s</string>
    <string name="card_file_md5">File MD5: %1$s</string>

</resources>
