<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/official"
            android:title="@string/navdrawer_official"
            android:icon="@drawable/official"/>
        <item
            android:id="@+id/weeklies"
            android:title="@string/navdrawer_weeklies"
            android:icon="@drawable/weekly"/>
        <item
            android:id="@+id/rc"
            android:title="@string/navdrawer_rc"
            android:icon="@drawable/rc"/>
    </group>
    <group
        android:id="@+id/gapps_category"
        android:checkableBehavior="single">
        <item
            android:id="@+id/gappsdynamic"
            android:title="@string/navdrawer_dynamic_gapps"
            android:icon="@drawable/gapps"/>
        <item
            android:id="@+id/gappstbo"
            android:title="@string/navdrawer_tbo_gapps"
            android:icon="@drawable/gapps"/>
    </group>
</menu>
